--- a/resume_project/index.html
+++ b/resume_project/index.html
@@ -30,14 +30,23 @@
             </div>
         </nav>
 
-        <header class = "header bg-bright" id = "header">
-            <div class = "container">
-                <div class = "header-content text-center">
-                    
-                    <h1 class = "lg-title">Only 2% of resumes make it pass the first round. Be in the top 2%</h1>
-                    <p class = "text-dark fs-18">Use professional field-tested resume templates that follow that exact 'resume rules' employers look for. Easy to use and done within minutes - try now for free!</p>
-                    <a href = "resume.html" class = "btn btn-primary text-uppercase">create my resume</a>
-                    <img src = "assets/images/dublin-resume-templates.avif">
+        <header class="header bg-bright" id="header">
+            <div class="container">
+                <div class="header-content text-center">
+                    <h1 class="lg-title">Only 2% of resumes make it past the first round. Be in the top 2%</h1>
+                    <p class="text-dark fs-18">Use professional field-tested resume templates that follow the exact 'resume rules' employers look for. Easy to use and done within minutes - try now for free!</p>
+                    <div class="btn-group">
+                        <a href="resume.html" class="btn btn-primary text-uppercase">Template-1     </a>
+                        <a href="resume1.html" class="btn btn-primary text-uppercase">Template-2   </a>
+                    </div>
+                    <div class="template-images">
+                        <div class="template-image">
+                            <img src="assets/images/dublin-resume-templates.avif" alt="Template 1">
+                        </div>
+                        <div class="template-image">
+                            <img src="assets\images\template_image.avif" alt="Other Template">
+                        </div>
+                    </div>
                 </div>
             </div>
         </header>
